@@ -1,4 +1,5 @@
 0.09
+ - Add check for 008 field with continuing resource currently published.
  - Update copyright years.
 
 0.08 2025-11-28T12:34:20+01:00
